# rust-token-contract-for-vaulta

./: Cargo.toml  README.md  clean_build.sh  token.abi
src/: lib.rs
