[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
